# project-sage

./: .gitignore  CHANGELOG.md  DUAL_MODEL_SETUP.md  LICENSE  PROJECT_SUMMARY.md  PRP.md  README.md  demo.py  enhanced_retrieval.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  test_chat.py  test_full_functionality.py  test_gui.py  test_models.py  verify_buttons.py
.claude/agents/: accessibility-specialist.md  ai-engineer.md  api-documenter.md  arbitrage-bot.md  backend-architect.md  blockchain-developer.md  business-analyst.md  cloud-architect.md  crypto-analyst.md  crypto-risk-manager.md  crypto-trader.md  data-scientist.md  database-optimizer.md  defi-strategist.md  deployment-engineer.md  devops-troubleshooter.md  directus-developer.md  drupal-developer.md  game-developer.md  golang-pro.md  graphql-architect.md  hyperledger-fabric-developer.md  laravel-vue-developer.md  legacy-modernizer.md  ml-engineer.md  mobile-developer.md  nextjs-app-router-developer.md  payment-integration.md  performance-engineer.md  php-developer.md  python-pro.md  quant-analyst.md  rails-pro.md  ruby-pro.md  rust-pro.md  security-auditor.md  test-automator.md  typescript-expert.md  wordpress-developer.md
.claude/commands/: execute-prp.md  generate-prp.md
demo_project/docs/: epc_contract_summary.txt  project_overview.md  technical_specs.md
sage/: __init__.py  cli.py  config.py  file_processor.py  gui_app.py  llm_client.py  model_manager.py  setup_gui.py  vector_store.py
tests/: __init__.py  test_cli.py  test_config.py
