[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-sage"
version = "1.2.0"
description = "An intelligent AI assistant for complex project management"
readme = "README.md"
authors = [
    {name = "Project Sage Team", email = "sage@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "customtkinter>=5.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "chromadb>=0.5.0",
    "unstructured[all-docs]>=0.14.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "matplotlib>=3.5.0",
    "langchain-ollama>=0.1.0"
]

[project.scripts]
sage = "sage.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["sage"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true